chore(ci): reorganize workflows and update Docker workflow
- Rename `.github/workflows/docker-publish.yml` → `.github/workflows/docker.yml`
- Rename `.github/workflows/maven.yml` → `.github/workflows/jvm.yml`
- Add new workflow `.github/workflows/native.yml`
- Update `docker.yml` steps to specify `file: ./Dockerfile.jvm` for builds

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -33,6 +33,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./Dockerfile.jvm       # <-- tambahkan ini
           push: true
           tags: |
             ${{ env.IMAGE_NAME }}:latest
@@ -46,6 +47,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./Dockerfile.jvm       # <-- tambahkan ini
           push: true
           tags: |
             ${{ env.IMAGE_NAME }}:latest
