--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,5 +12,5 @@
   "mounts": [
     "source=${localWorkspaceFolder},target=/workspace,type=bind"
   ],
-  "postCreateCommand": "./mvnw clean install"
+  "postCreateCommand": "./mvnw clean install -DskipTests"
 }
