Update application.yml and add migration for project table creation
- Changed 'ddl-auto' property in application.yml from 'create-drop' to 'validate'.
- Added SQL migration file for creating 'project' table (V20250808_082929__create_project_table.sql).

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   jpa:
     # Atur strategi DDL (none, validate, update, create, create-drop)
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: validate
     # Dialek Hibernate untuk PostgreSQL
     properties:
       hibernate:
