Enable Flyway clean, update Project entity and migration scripts
- Added 'flyway.cleanDisabled=false' to flyway.conf to enable the clean command.
- Removed custom UUID generation in Project entity and used 'gen_random_uuid()' for automatic UUID generation in database.
- Updated 'Project' entity by removing the 'PrePersist' method for UUID generation and unnecessary index.
- Changed 'id' column type in 'create_project_table.sql' from 'SERIAL' to 'BIGSERIAL' for better compatibility with large IDs.
- Added migration script to create the 'pgcrypto' extension for UUID generation.

--- a/flyway.conf
+++ b/flyway.conf
@@ -3,3 +3,4 @@ flyway.password=admin
 flyway.schemas=public
 flyway.url=jdbc:postgresql://localhost:5432/agungdh
 flyway.locations=filesystem:db/migration
+flyway.cleanDisabled=false
