--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,9 @@
     "vscjava.vscode-spring-boot",
     "redhat.java"
   ],
-  "forwardPorts": [8080],
+  "forwardPorts": [
+    8080
+  ],
   "mounts": [
     "source=${localWorkspaceFolder},target=/workspace,type=bind"
   ],
