--- a/Dockerfile.native
+++ b/Dockerfile.native
@@ -1,5 +1,5 @@
 # --- Stage 1: Build native image with GraalVM CE (open-source) ---
-FROM ghcr.io/graalvm/native-image-community:21 AS builder
+FROM --platform=arm64 ghcr.io/graalvm/native-image-community:21 AS builder
 WORKDIR /workspace
 
 # 1. Salin Maven Wrapper dan pom.xml
@@ -16,7 +16,7 @@ COPY src/ src/
 RUN ./mvnw -Pnative native:compile -DskipTests -Dspring.native.mode=compatibility
 
 # --- Stage 2: Runtime with Debian Bookworm-slim (glibc) ---
-FROM debian:bookworm-slim AS runtime
+FROM --platform=arm64 debian:bookworm-slim AS runtime
 
 # Install minimal dependencies and CA certificates
 RUN apt-get update && \
