ci(build): wire ARM workflow & split Dockerfiles by architecture
- Update docker-native-arm workflow to use `Dockerfile.native-arm64`
- Remove `--platform=arm64` from `Dockerfile.native` to be arch-agnostic (defaults to runner arch)
- Add `Dockerfile.native-amd64` for explicit x86_64 builds

Files: .github/workflows/docker-native-arm.yml, Dockerfile.native, Dockerfile.native-amd64

--- a/.github/workflows/docker-native-arm.yml
+++ b/.github/workflows/docker-native-arm.yml
@@ -33,7 +33,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: Dockerfile.native
+          file: Dockerfile.native-arm64
           push: true
           tags: |
             ${{ env.IMAGE_NAME }}:arm64-native
@@ -47,7 +47,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: Dockerfile.native
+          file: Dockerfile.native-arm64
           push: true
           tags: |
             ${{ env.IMAGE_NAME }}:arm64-native
