--- a/pom.xml
+++ b/pom.xml
@@ -151,9 +151,32 @@
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
                 <artifactId>spotless-maven-plugin</artifactId>
+                <version>2.46.1</version>
                 <configuration>
                     <java>
-                        <googleJavaFormat/>
+                        <!-- These are the defaults, you can override if you want -->
+                        <includes>
+                            <include>src/main/java/**/*.java</include>
+                            <include>src/test/java/**/*.java</include>
+                        </includes>
+
+                        <!-- Cleanthat will refactor your code, but it may break your style: apply it before your formatter -->
+                        <cleanthat />        <!-- has its own section below -->
+
+                        <googleJavaFormat /> <!-- has its own section below -->
+<!--                        <eclipse />          &lt;!&ndash; has its own section below &ndash;&gt;-->
+<!--                        <prettier />         &lt;!&ndash; has its own section below &ndash;&gt;-->
+<!--                        <idea />             &lt;!&ndash; has its own section below &ndash;&gt;-->
+
+                        <importOrder /> <!-- standard import order -->
+
+                        <removeUnusedImports /> <!-- self-explanatory -->
+
+                        <formatAnnotations />  <!-- fixes formatting of type annotations, see below -->
+
+                        <licenseHeader>
+                            <content>/* (C)$YEAR */</content>  <!-- or <file>${project.basedir}/license-header</file> -->
+                        </licenseHeader>
                     </java>
                 </configuration>
             </plugin>
