build(spotless): enforce project license header; tidy GraphQL advice; clarify DTO validation
- pom: set Spotless <licenseHeader> to "/* (C) $YEAR Agung DH */" with delimiter "package "
- apply new header banner across Java sources
- graphql: switch GraphQLValidationExceptionAdvice to @ControllerAdvice (global handler) and clean up imports/formatting
- dto: make ProjectDTO.description explicitly @NotBlank @NotNull @NotEmpty
- interceptor: add file header and reformat GraphQlErrorInterceptor (no behavior change)

--- a/pom.xml
+++ b/pom.xml
@@ -175,8 +175,10 @@
                         <formatAnnotations />  <!-- fixes formatting of type annotations, see below -->
 
                         <licenseHeader>
-                            <content>/* (C)$YEAR */</content>  <!-- or <file>${project.basedir}/license-header</file> -->
+                            <content>/* (C) $YEAR Agung DH */</content>
+                            <delimiter>package </delimiter>
                         </licenseHeader>
+
                     </java>
                 </configuration>
             </plugin>
